# obj-mesh-analyzer

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
